--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -8,6 +8,8 @@ Functionals
 * Specify shape of node (rounded rectangle, diamond, end-point, etc.)
 * Grouping nodes (like DOT's subgraph).
 * Sphinx extension.
+* Export diagram as vector data.
+* Support other block diagram structure.
 
 Environments
 -------------
@@ -15,5 +17,5 @@ Environments
 
 Known Issues
 -------------
-Not yet.
+* Not yet.
 
