--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -3,16 +3,20 @@ Todos
 
 Functionals
 ------------
-* Description (or note) to node.
-* Description to edge.
+* Description to nodes.
+* Description to edges.
+* Description to node groups.
+* Specify node group's background color.
 * Specify shape of node (rounded rectangle, diamond, end-point, etc.)
 * Support other block diagram structure.
 
 Environments
 -------------
-* font configuration.
+* Font configuration.
+* Documention of diag format.
 
 Known Issues
 -------------
+* SVG outputs does not support node's background attr.
 * Not yet.
 
