Update MAN page

--- a/blockdiag.1
+++ b/blockdiag.1
@@ -53,6 +53,9 @@ write diagram to FILE
 .B \-f FONT, \-\-font=FONT
 use FONT to draw diagram
 .TP
+.B \-\-fontmap=FONT
+use FONTMAP file to draw diagram
+.TP
 .B \-s, \-\-separate
 Separate diagram images for each group
 .TP
@@ -61,6 +64,9 @@ Output diagram as TYPE format
 .TP
 .B \-\-nodoctype
 Do not output doctype definition tags (SVG only)
+.TP
+.B \-\-no-transparency
+do not make transparent background of diagram (PNG only)
 .SH SEE ALSO
 The programs are documented fully by
 .br
